k8s/kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  labels:
    app: kong
spec:
  type: ClusterIP
  externalIPs:
    - 188.245.104.79
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: proxy
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: admin
  selector:
    app: kong
